--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.11'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
 jacocoTestReport {
